--- a/templats/userst/single.html
+++ b/templats/userst/single.html
@@ -58,10 +58,12 @@
 							});
 						</script>
 					</div>
-					<div class="col-md-7 single-top-right">
+					<div class="col-md-4 single-top-right text-left">
 						<div class="single-para simpleCart_shelfItem">
 							<h2>{{single_pro.prodectname}}</h2>
 							<h5 class="item_price">$ {{single_pro.price}}</h5>
+							<h4><i class="fa fa-star"> {{avg_rating}}</i></h4>
+					
 							<ul class="tag-men">
 								<li><span>Gender</span>
 									<span class="women1">: {{ single_pro.gender }}</span>
@@ -81,6 +83,7 @@
 							{% endif %}
 
 					</div>
+
 				</div>
 				<div class="clearfix"> </div>
 				<div class="container text-left">
@@ -124,9 +127,13 @@
 								style="width: 100%; border-radius: 3rem; padding-left: 2%;" rows="4"></textarea>
 							<hr>
 							{% if user.is_authenticated %}
+							{% if orderprodect %}
 							<div class="text-right">
 								<input type="submit" value="Submit Review" class="btn btn-info">
 							</div>
+							{% else %}
+							<p>You must purchase this product to post the review.</p>
+							{% endif %}
 							{% else %}
 							<p>You must be logged in to post a review. <span><a href="{% url 'login' %}">Login
 										Now</a></span></p>
@@ -137,6 +144,32 @@
 					</form>
 				</div>
 			</div>
+		</div>
+		<div class="container">
+			<h2 class="text-left">Reviews</h2>
+			{% for review in reviews %}
+			<article class="col-md-9" style="box-shadow: 0px 0px 4px black; border-radius: 1rem; margin-top: 1%;">
+				<div class="row" style=" padding-top: 1%;">
+					<div class="col-md-6" style="display: flex; justify-content: left; padding-left: 3%;">
+						<img src="{% static 'adm/vendors/images/user.png' %}" width="10%"
+							class="img-xs icon rounded-circle" alt="">
+						<h6 style="padding-left: 1%;"><b class="mb-3">{{review.user.username}}</b></h6>
+					</div>
+					<div class="col-md-6" style="display: flex; justify-content: right; padding-right: 3%;">
+						<div class="text">
+							<span class="data text-muted float-md-right">{{review.updated_at}}</span>
+						</div>
+					</div>
+
+				</div>
+				<div class=" text-left"
+					style="padding-right: 3%; padding-left: 2%;padding-top: 1%;">
+					<h4><i class="fa fa-star"> {{review.rating}}</i></h4>
+					<h4>{{review.subject}}</h4>
+					<p>{{review.review}}</p>
+				</div>
+			</article>
+			{% endfor %}
 		</div>
 		<div class="latestproducts">
 
