--- a/templats/adm/proList.html
+++ b/templats/adm/proList.html
@@ -45,7 +45,7 @@
 											</a>
 											<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
 												<a class="dropdown-item" href="{% url 'edit' prodect.id %}"><i class="dw dw-edit2"></i> Edit</a>
-												<a class="dropdown-item" href="{% url 'delete' prodect.id %}" onclick="return confirm('are you shure about deleting?') " style="color: red;"><i class="dw dw-delete-3"></i> Delete</a>
+												<a class="dropdown-item" onclick="delete_prodect('{{prodect.id}}')" data-toggle="modal" data-target="#exampleModalCenter" style="color: red;"><i class="dw dw-delete-3"></i> Delete</a>
 											</div>
 										</div>
 									</td>
@@ -59,6 +59,27 @@
 				<!-- Export Datatable End -->
 			</div>
 		</div>
+	</div>
+	<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Delete</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <h6>Are you sure to delete ?</h6>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <a onclick="deleteProdect()" id="delete_prodect"><button type=" button"
+                        class="btn btn-danger">Delete</button></a>
+            </div>
+        </div>
+    </div>
 	</div>
 	<!-- js -->
 	<script src="{% static 'adm/vendors/scripts/core.js' %}"></script>
@@ -78,6 +99,37 @@
 	<script src="{% static 'adm/src/plugins/datatables/js/pdfmake.min.js' %}"></script>
 	<script src="{% static 'adm/src/plugins/datatables/js/vfs_fonts.js' %}"></script>
 	<!-- Datatable Setting js -->
-	<script src="{% static 'adm/vendors/scripts/datatable-setting.js' %}"></script></body>
+	<script src="{% static 'adm/vendors/scripts/datatable-setting.js' %}"></script>
+
+
+</body>
+
+	<script>
+
+		function delete_prodect(id) {
+			console.log(id)
+			document.getElementById('delete_prodect').value = id
+		}
+	
+		function deleteProdect() {
+			var id = document.getElementById('delete_prodect').value
+			console.log(id)
+			$.ajax({
+				url: '/panel/delete',
+				method: 'POST',
+				dataType: 'json',
+				data: {
+					id: id,
+					csrfmiddlewaretoken: "{{csrf_token}}"
+				},
+				success: (response) => {
+					location.reload()
+				}
+			})
+	
+		}
+
+	</script>
+
 </html>
 {% endblock %}
