--- a/templats/userst/cart.html
+++ b/templats/userst/cart.html
@@ -59,7 +59,7 @@
 							<div class="row">
 								<div class="col-md-3">
 									<div class="cart-item cyc">
-										<img src="{{ cart_item.prodect.img1.url }}" class="img-responsive" alt="" />
+										<img src="{{ cart_item.prodect.img1.url }}" class="img-responsive" width="100%"  alt="" />
 									</div>
 								</div>
 
