--- a/templats/userst/checkout.html
+++ b/templats/userst/checkout.html
@@ -33,6 +33,45 @@
 									<div class="wizard-header">
 										<h3 class="heading" style="color: navy;"><b>C</b>heck <b>O</b>ut</h3>
 										<p>Fill all form field to go next step</p>
+
+
+
+									<div style="display: flex; justify-content: center; margin-top: 3%;">
+										<article class="card text-left" style="width: 90%; display: flex; justify-content: center; box-shadow: 0px 0px 11px rgb(211, 211, 211); border-color: rgb(255, 255, 255);">
+											<header class="card-header mb-2" style="display: flex; justify-content: space-between;">
+												<strong class="d-inline-block mr-3">My Addresses</strong>
+												<a href="{% url 'profile' %}" class="btn btn-outline-info">Add Address</a>
+											</header>
+											<div class="container">
+												<form id="adrs">
+													{% for address in addresses %}
+													<div class="row">
+														<div class="col-md-1 pt-2 text-center">
+															<input type="radio" onchange="a('{{address.first_name}}','{{address.last_name}}','{{address.adrs}}','{{address.city}}','{{address.district}}','{{address.state}}','{{address.country}}','{{address.pincode}}','{{address.phone}}','{{address.phone2}}','{{address.email}}')" id="{{address.id}}" name="address" value="{{address.id}}">
+														</div>
+														<div class="mt-3 mb-3" style="width: 100%; display: flex; justify-content: center;">
+													
+															<div class="card" style=" box-shadow: 0px 0px 5px rgb(0, 132, 255); border-color: rgb(255, 255, 255); width: 90%;">
+																<div class="card-body" style="height: 30%;">
+																		<header class="card-header mb-2" style="width: 100%;">
+																			<h5 class=" d-inline-block mr-3 card-title mb-0" >{{address.full_name}}</h5>
+																		</header>
+																</div>
+															</div>
+														</div>
+													</div>
+													{% endfor %}
+												</form>
+											</div>
+											<div class="row">
+												{% if addresses %}
+												{% else %}
+												<p class="pb-2" style="padding-left: 30px;">No saved addresses</p>
+												{% endif %}
+											</div>
+										</article>
+									</div>
+
 									</div>
 									<form class="form-register" action="{% url 'place_order' %}" method="POST">
 										{% csrf_token %}
@@ -62,17 +101,17 @@
 																<span class="border"></span>
 															</label>
 														</div>
-													</div>
+													</div><br>
 													<div class="form-row">
 														<div class="form-holder" style="width: 100%;">
 															<label class="form-row-inner" style="width: 100%;">
-																<input type="email" style="width: 97%;"  class="form-control" id="email"
+																<input type="email" style="width: 97%;"  class="form-control" id="Email"
 																	name="email" required>
 																<span class="label">Email</span>
 																<span class="border"></span>
 															</label>
 														</div>
-													</div>
+													</div><br>
 													<div class="form-row">
 														<div class="form-holder">
 															<label class="form-row-inner">
@@ -101,13 +140,13 @@
 																<span class="border"></span>
 															</label>
 														</div>
-													</div>
+													</div><br>
 													<div class="form-row">
 														<div class="form-holder">
 															<label class="form-row-inner">
-																<input type="text" class="form-control" id="country"
-																	name="country" required>
-																<span class="label">Country</span>
+																<input type="text" class="form-control" id="district"
+																	name="district" required>
+																<span class="label">District</span>
 																<span class="border"></span>
 															</label>
 														</div>
@@ -119,18 +158,18 @@
 																<span class="border"></span>
 															</label>
 														</div>
-													</div>
+													</div><br>
 													<div class="form-row">
 														
 														<div class="form-holder">
 															<label class="form-row-inner">
-																<input type="text" class="form-control" id="district"
-																	name="district" required>
-																<span class="label">District</span>
+																<input type="text" class="form-control" id="country"
+																	name="country" required>
+																<span class="label">Country</span>
 																<span class="border"></span>
 															</label>
 														</div>
-													</div>
+													</div><br>
 													<div class="form-row">
 														<div class="form-holder">
 															<label class="form-row-inner">
@@ -142,8 +181,8 @@
 														</div>
 														<div class="form-holder">
 															<label class="form-row-inner">
-																<input type="text" class="form-control" id="phon2"
-																	name="phon2" >
+																<input type="text" class="form-control" id="phone2"
+																	name="phone2" >
 																<span class="label">Phon-2 (op)</span>
 																<span class="border"></span>
 															</label>
@@ -296,6 +335,23 @@
 		});
 
 	</script>
+
+<script>
+    function a(first_name,last_name,adrs,city,district,state,country,pincode,phone,phone2,email){
+        document.getElementById('first_name').value = first_name
+        document.getElementById('last_name').value = last_name
+        document.getElementById('address').value = adrs
+        document.getElementById('city').value = city
+        document.getElementById('district').value = district
+        document.getElementById('state').value = state
+        document.getElementById('country').value = country
+        document.getElementById('pincode').value = pincode
+        document.getElementById('phone').value = phone
+        document.getElementById('phone2').value = phone2
+        document.getElementById('Email').value = email
+    }
+</script>
+
 </body>
 
 </html>
