--- a/templats/adm/base.html
+++ b/templats/adm/base.html
@@ -46,43 +46,7 @@
 	<div class="header">
 		<div class="header-left">
 			<div class="menu-icon dw dw-menu"></div>
-			<div class="search-toggle-icon dw dw-search2" data-toggle="header_search"></div>
-			<div class="header-search">
-				<form>
-					<div class="form-group mb-0">
-						<i class="dw dw-search2 search-icon"></i>
-						<input type="text" class="form-control search-input" placeholder="Search Here">
-						<div class="dropdown">
-							<a class="dropdown-toggle no-arrow" href="#" role="button" data-toggle="dropdown">
-								<i class="ion-arrow-down-c"></i>
-							</a>
-							<div class="dropdown-menu dropdown-menu-right">
-								<div class="form-group row">
-									<label class="col-sm-12 col-md-2 col-form-label">From</label>
-									<div class="col-sm-12 col-md-10">
-										<input class="form-control form-control-sm form-control-line" type="text">
-									</div>
-								</div>
-								<div class="form-group row">
-									<label class="col-sm-12 col-md-2 col-form-label">To</label>
-									<div class="col-sm-12 col-md-10">
-										<input class="form-control form-control-sm form-control-line" type="text">
-									</div>
-								</div>
-								<div class="form-group row">
-									<label class="col-sm-12 col-md-2 col-form-label">Subject</label>
-									<div class="col-sm-12 col-md-10">
-										<input class="form-control form-control-sm form-control-line" type="text">
-									</div>
-								</div>
-								<div class="text-right">
-									<button class="btn btn-primary">Search</button>
-								</div>
-							</div>
-						</div>
-					</div>
-				</form>
-			</div>
+			<h1 style="margin-left: 6%;"><b>T</b>riple <b>H</b>ash</h1>
 		</div>
 		<div class="header-right">
 			<div class="dashboard-setting user-notification">
@@ -151,7 +115,7 @@
 
 
 			
-			<div class="user-info-dropdown">
+			<!-- <div class="user-info-dropdown">
 				<div class="dropdown">
 					<a class="dropdown-toggle" href="#" role="button" data-toggle="dropdown">
 						<span class="user-icon">
@@ -166,7 +130,7 @@
 						<a class="dropdown-item" href="login.html"><i class="dw dw-logout"></i> Log Out</a>
 					</div>
 				</div>
-			</div>
+			</div> -->
 		</div>
 	</div>
 
@@ -246,10 +210,9 @@
 	</div>
 
 	<div class="left-side-bar">
-		<div class="brand-logo">
+		<div class="text-center">
 			<a href="index.html">
-				<img src="{% static 'adm/vendors/images/deskapp-logo.svg' %}" alt="" class="dark-logo">
-				<img src="{% static 'adm/vendors/images/deskapp-logo-white.svg' %}" alt="" class="light-logo">
+			<h1 style="color: white; margin-top: 3%;"><b>[###]</b></h1>
 			</a>
 			<div class="close-sidebar" data-toggle="left-sidebar-close">
 				<i class="ion-close-round"></i>
@@ -300,6 +263,11 @@
 
 							<li><a href="{% url 'order_history' %}">Order History</a></li>
 						</ul>
+					</li>
+					<li>
+						<a href="{% url 'report' %}" class="dropdown-toggle no-arrow">
+							<span class="micon dw dw-eye"></span><span class="mtext">Report</span>
+						</a>
 					</li>
 					
 					
