--- a/templats/userst/cart.html
+++ b/templats/userst/cart.html
@@ -49,9 +49,9 @@
 
 					{% for cart_item in cart_items %}
 					<br>
-					<div class="cart-header" style=" box-shadow: 0px 5px 10px;">
+					<div class="cart-header" style=" box-shadow: 0px 5px 10px; border-radius: 1rem 0px 0px 0px;">
 
-						<a style="display: flex; justify-content: end;"
+						<a style="display: flex; justify-content: end; border-radius: 1rem 0px 1rem 0px;"
 							href="{% url 'remove_cart_item' cart_item.prodect.id %}" type="button"
 							class="btn btn-danger"><b>REMOVE</b></a></li>
 
@@ -101,7 +101,7 @@
 					</script>
 				</div>
 
-				<div class="col-md-3 cart-total" style=" box-shadow: 0px 3px 3px rgb(119, 119, 119);">
+				<div class="col-md-3 cart-total " style=" box-shadow: 0px 0px 9px rgb(119, 119, 119); border-radius: 1rem;">
 					<a class="continue btn btn-primary" style="margin-top: 3%;" href="{% url 'hom' %}">Continue to
 						basket</a>
 					<div class="price-details">
@@ -126,11 +126,11 @@
 						<div class="clearfix"> </div>
 					</ul>
 					<div class="clearfix"></div>
-					<a class="order btn btn-primary" href="{% url 'place_order' %}">Place Order</a>
-					<div class="total-item">
+					<a class="order btn btn-primary" style="margin-bottom: 3%;" href="{% url 'place_order' %}">Place Order</a>
+					<!-- <div class="total-item">
 						<h3>OPTIONS</h3>
 						<a class="cpns btn btn-primary" style="margin-bottom: 3%;" href="#">Apply Coupons</a>
-					</div>
+					</div> -->
 				</div>
 
 				<div class="clearfix"></div>
@@ -145,7 +145,7 @@
 				<div class="col-md-3 infor-left">
 					<h3>Follow Us</h3>
 					<ul>
-						<li><a href="#"><span class="fb"></span>
+						<li><a href="https://www.facebook.com/fz.fzbeck/"><span class="fb"></span>
 								<h6>Facebook</h6>
 							</a></li>
 						<li><a href="#"><span class="twit"></span>
