--- a/templats/userst/products.html
+++ b/templats/userst/products.html
@@ -7,7 +7,7 @@
 	<div class="container">
 		<div class="breadcrumbs-main">
 			<ol class="breadcrumb">
-				<li><a href="index.html">Home</a></li>
+				<li><a href="{% url 'hom' %}">Home</a></li>
 				<li class="active">New Products</li>
 			</ol>
 		</div>
