--- a/templats/userst/test.html
+++ b/templats/userst/test.html
@@ -1,344 +1,33 @@
-<style>
-
-    body{
-        margin:0px;
-        height:100vh;
-        font-family: "open sens",sans-serif;
-    }
-    .center {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-50%);
-    }
-    .center a {
-        padding: 10px 20px;
-        background: #eee;
-        color: #111;
-        font-size: 15px;
-        text-decoration: none;
-        border-radius: 5px;
-    }
-    #popup {
-        position: fixed;
-        top: 0px;
-        left: 0px;
-        width: 100vw;
-        height: 100vw;
-        background: rgba(0,0,0,0.75);
-        display: none;
-    }
-    #popup .popup-content {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 400px;
-        padding: 10px 20px;
-        background: #eee;
-
-    }
-    #popup a.close-popup {
-
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        font-size: 20px;
-        font-weight: 600;
-        text-decoration: none;
-    }
-    #popup a.submit-popup {
-        position: absolute;
-        top: 3px;
-        right: 20px;
-        font-size: 20px;
-        font-weight: 600;
-        text-decoration: none;
-    }
-    #popup:target {
-        display: block;
-    }
-
-
-</style>
-
-
-    <div class="">
-        <a href="#popup">Open popup</a>
-    </div>
-
-    <div id="popup">
-        <div class="popup-content">
-            <h1>Title</h1>
-            <a href="#" class="close-popup " >X</a>
-            
-            <a href="{% url 'hom' %}" class="submit-popup btn btn-danger" >home</a>
-        </div>
-    </div>
-
-<a onclick="delete_brand('{{cart_item.prodect.id}}')" type="button" data-toggle="modal" data-target="#exampleModalCenter"
-    style="color: red;"><b>REMOVE</b></a>
-
-
-
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-    aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Delete</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <h6>Are you sure to delete ?</h6>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <a onclick="deleteBrand()" id="delete_brand"><button type=" button"
-                        class="btn btn-danger">Delete</button></a>
-            </div>
-        </div>
-    </div>
-</div>
-
- Modal Ends Here 
-
-
- <script>
-
-    function delete_brand(id) {
-        document.getElementById('delete_brand').value = id
-    }
-
-    function deleteBrand() {
-        var id = document.getElementById('remove_cart_item').value
-        $.ajax({
-            url: '/carts/remove_cart_item',
-            method: 'POST',
-            dataType: 'json',
-            data: {
-                id: id,
-                csrfmiddlewaretoken: "{{csrf_token}}"
-            },
-            success: (response) => {
-                location.reload()
-            }
-        })
-
-    }
-</script>
-{% endblock %}
-
-
-</body>
-
-</html> 
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!--  
-
-{% extends 'base.html' %}
-
 {% load static %}
-
-
-
-{% block content %} 
-
-
-
- ========================= SECTION CONTENT ========================= 
- <section class="section-conten padding-y bg">
-
-    <div class="container">
-        <div class="row">
-            {% include 'includes/dashboard_sidebar.html' %}
-            <main class="col-md-9">
-                <article class="card">
-                    <header class="card-header mb-2">
-                        <strong class="d-inline-block mr-3">My Addresses</strong>
-                    </header>
-                    <div class="row">
-                        {% if addresses %}
-                        {% for address in addresses %}
-                        <div class="col-sm-6 mt-2 mb-2">
-                            <div class="card">
-                                <div class="card-body" style="height: 200px;">
-                                    <div class="row">
-                                        <div class="container" style="display: flex; justify-content: space-between;">
-                                            <h5 class="card-title mb-0">{{address.full_name}}</h5>
-                                            <a onclick="delete_address('{{address.id}}')" type="button"
-                                                data-toggle="modal" data-target="#exampleModalCenter"><i
-                                                    class="fas fa-trash-alt" style="color: red;"></i></a>
-                                        </div>
-                                    </div>
-                                    <p class="card-text mb-0">Address:</p>
-                                    <p class="card-text mb-0">{{address.full_address}}</p>
-                                    <p class="card-text mb-0">{{address.city}}, {{address.state}}</p>
-                                    <p class="card-text mb-0">{{address.country}}, PIN: {{address.pincode}}</p>
-                                    <p class="card-text mb-0">Phone: {{address.all_numbers}}</p>
-                                </div>
-                            </div>
-                        </div>
-                        {% endfor %}
-                        {% else %}
-                        <p class="pb-2" style="padding-left: 30px;">No saved addresses</p>
-                        {% endif %}
-                    </div>
-                </article>
-
-
-                <article class="card mt-3">
-                    <header class="card-header mb-2">
-                        <strong class="d-inline-block mr-3">Add Address</strong>
-                    </header>
-
-                    <div class="col-md-12">
-                        <form action="" method="post">
-                            {% csrf_token %}
-
-                            <div class="form-row mt-3">
-                                <div class="form-group col-md-6">
-                                    <label>First Name</label>
-                                    {{ address_form.first_name }}
-                                </div>
-                                <div class="form-group col-md-6">
-                                    <label>Profile Picture</label>
-                                    {{ address_form.last_name }}
-                                </div>
-                            </div>
-
-                            <div class="form-row">
-                                <div class="form-group col-md-6">
-                                    <label>Address Line 1</label>
-                                    {{ address_form.address_line_1 }}
-                                </div>
-                                <div class="form-group col-md-6">
-                                    <label>Address Line 2</label>
-                                    {{ address_form.address_line_2 }}
-                                </div>
-                            </div>
-
-                            <div class="form-row">
-                                <div class="form-group col-md-3">
-                                    <label>City</label>
-                                    {{ address_form.city }}
-                                </div>
-                                <div class="form-group col-md-3">
-                                    <label>State</label>
-                                    {{ address_form.state }}
-                                </div>
-                                <div class="form-group col-md-3">
-                                    <label>Country</label>
-                                    {{ address_form.country }}
-                                </div>
-                                <div class="form-group col-md-3">
-                                    <label>Pincode</label>
-                                    {{ address_form.pincode }}
-                                </div>
-                            </div>
-
-                            <div class="form-row">
-                                <div class="form-group col-md-6">
-                                    <label>Phone Number</label>
-                                    {{ address_form.phone_number }}
-                                </div>
-                                <div class="form-group col-md-6">
-                                    <label>Email</label>
-                                    {{ address_form.email }}
-                                </div>
-                            </div>
-
-                            <div class="form-row mb-3" style="display: flex; justify-content: center ;">
-                                <input type="submit" class="btn btn-primary">
-                            </div>
-
-                        </form>
-                    </div>
-
-                </article>
-
-
-
-
-            </main>
-        </div>  row.// 
-    </div>
-
-
-</section>
- ========================= SECTION CONTENT END// ========================= 
-
-
- Modal 
-
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-    aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Delete</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <h6>Are you sure to delete ?</h6>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <a onclick="deleteAddress()" id="delete_address" ><button type=" button"
-                    class="btn btn-danger">Delete</button></a>
-            </div>
-            
-        </div>
-    </div>
-</div>
-
-
-
-<script>
-
-    function delete_address(id) {
-        console.log(id)
-        document.getElementById('delete_address').value = id
-    }
-
-    function deleteAddress() {
-        var id = document.getElementById('delete_address').value
-        console.log(id)
-        $.ajax({
-            url: '/delete_address',
-            method: 'POST',
-            dataType: 'json',
-            data: {
-                id: id,
-                csrfmiddlewaretoken: "{{csrf_token}}"
-            },
-            success: (response) => {
-                location.reload()
-            }
-        })
-
-    }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <style type="text/css">
+        ul{float: left;}
+        ul li{list-style-type: none; margin-bottom: 10px;}
+        ul li img{width: 70px; height: 70px;}
+        .big_img{width: 35%;height: 400px; float: left;margin-top: 20px; margin-left: 10px;}
+    </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+</head>
+<body>
+    <ul>
+        <li><img src="{% static 'user/images/abt-1.jpg' %}" class="small_img" alt=""></li>
+        <li><img src="{% static 'user/images/abt-2.jpg' %}" class="small_img" alt=""></li>
+        <li><img src="{% static 'user/images/abt-3.jpg' %}" class="small_img" alt=""></li>
+    </ul>
+    <img src="{% static 'user/images/abt-1.jpg' %}" class="big_img" alt="">
+</body>
+</html>
+<script type="text/javascript">
+    $(document).ready(function(){
+        $(".small_img").hover(function(){
+            $(".bog_img").attr('src',$(this).attr('src'));
+        });
+    });
 </script>
-
- Modal Ends Here 
-
-
-
-
-{% endblock %}  -->
