--- a/templats/userst/index.html
+++ b/templats/userst/index.html
@@ -54,8 +54,7 @@
 				<figure class="effect-bubba">
 					<img class="img-responsive" src="{% static 'user/images/abt-1.jpg' %}" alt="" />
 					<figcaption>
-						<h2>Nulla maximus nunc</h2>
-						<p>In sit amet sapien eros Integer dolore magna aliqua</p>
+						<h2>Coming Soon...</h2>
 					</figcaption>
 				</figure>
 			</div>
@@ -63,8 +62,7 @@
 				<figure class="effect-bubba">
 					<img class="img-responsive" src="{% static 'user/images/abt-2.jpg' %}" alt="" />
 					<figcaption>
-						<h4>Mauris erat augue</h4>
-						<p>In sit amet sapien eros Integer dolore magna aliqua</p>
+						<h4>Coming Soon...</h4>
 					</figcaption>
 				</figure>
 			</div>
@@ -72,8 +70,7 @@
 				<figure class="effect-bubba">
 					<img class="img-responsive" src="{% static 'user/images/abt-3.jpg' %}" alt="" />
 					<figcaption>
-						<h4>Cras elit mauris</h4>
-						<p>In sit amet sapien eros Integer dolore magna aliqua</p>
+						<h4>Coming Soon...</h4>
 					</figcaption>
 				</figure>
 			</div>
