--- a/templats/userst/profile.html
+++ b/templats/userst/profile.html
@@ -223,7 +223,7 @@
 															<label>Gender</label>
 															<div class="d-flex">
 																<div class="custom-control custom-radio mb-5 mr-20">
-																	<input type="radio" id="customRadio4"
+																	<input type="radio" id="customRadio4" checked
 																		name="gender"  value="Male"  class="custom-control-input">
 																	<label class="custom-control-label weight-400"
 																		for="customRadio4">Male</label>
