--- a/templats/adm/cat_list.html
+++ b/templats/adm/cat_list.html
@@ -15,7 +15,6 @@
                                         <th>Brand</th>
 										<th>Discription</th>
 										<th>Date</th>
-                                        
 										<th>Image</th>
 										<th></th>
 								</tr>
@@ -42,7 +41,7 @@
 											</a>
 											<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
 												<!-- <a class="dropdown-item" href="{% url 'edit' catagory.id %}"><i class="dw dw-edit2"></i> Edit</a> -->
-												<a class="dropdown-item" href="{% url 'cat_delete' catagory.id %}" onclick="return confirm('are you shure about deleting?') " style="color: red;"><i class="dw dw-delete-3"></i> Delete</a>
+												<a class="dropdown-item" onclick="delete_cat('{{catagory.id}}')" data-toggle="modal" data-target="#exampleModalCenter" style="color: red;"><i class="dw dw-delete-3"></i> Delete</a>
 											</div>
 										</div>
 									</td>
@@ -56,6 +55,27 @@
 				<!-- Export Datatable End -->
 			</div>
 		</div>
+	</div>
+	<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Delete</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <h6>Are you sure to delete ?</h6>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <a onclick="deleteCat()" id="delete_cat"><button type=" button"
+                        class="btn btn-danger">Delete</button></a>
+            </div>
+        </div>
+    </div>
 	</div>
 	<!-- js -->
 	<script src="{% static 'adm/vendors/scripts/core.js' %}"></script>
@@ -75,6 +95,34 @@
 	<script src="{% static 'adm/src/plugins/datatables/js/pdfmake.min.js' %}"></script>
 	<script src="{% static 'adm/src/plugins/datatables/js/vfs_fonts.js' %}"></script>
 	<!-- Datatable Setting js -->
-	<script src="{% static 'adm/vendors/scripts/datatable-setting.js' %}"></script></body>
+	<script src="{% static 'adm/vendors/scripts/datatable-setting.js' %}"></script>
+</body>
+
+	<script>
+
+		function delete_cat(id) {
+			console.log(id)
+			document.getElementById('delete_cat').value = id
+		}
+	
+		function deleteCat() {
+			var id = document.getElementById('delete_cat').value
+			console.log(id)
+			$.ajax({
+				url: '/panel/cat_delete',
+				method: 'POST',
+				dataType: 'json',
+				data: {
+					id: id,
+					csrfmiddlewaretoken: "{{csrf_token}}"
+				},
+				success: (response) => {
+					location.reload()
+				}
+			})
+	
+		}
+
+	</script>
 </html>
 {% endblock %}
