--- a/templats/adm/report.html
+++ b/templats/adm/report.html
@@ -3,76 +3,215 @@
 {% block content %}
 <div class="pd-ltr-20 xs-pd-20-10">
 	<div class="min-height-200px">
+		<ul class="nav nav-tabs customtab" role="tablist">
+			<li class="nav-item">
+				<a class="nav-link active" data-toggle="tab" style="margin-left: 9px;" href="#order_list" role="tab">Order List</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" data-toggle="tab" href="#product_list" role="tab">Product List</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" data-toggle="tab" href="#user_list" role="tab">User List</a>
+			</li>
 
+		</ul>
 
-		<div class="card-box mb-30">
-			<div class="pd-20">
-				<h4 class="text-blue h4">Report</h4>
-				<b class="text-blue h6" style="color: rgb(90, 90, 90);">Order List</b>
+		<div class="tab-content">
+			<!-- Timeline Tab start -->
+			<div class="tab-pane fade show active" id="order_list" role="tabpanel">
+				<div class="card-box mb-30">
+					<div class="row">
+						<div class="col-md-4">
+							<div class="pd-20">
+								<h4 class="text-blue h4">Report</h4>
+								<b class="text-blue h6" style="color: rgb(90, 90, 90);">Order List</b>
 
+							</div>
+						</div>
+						<div class="col-md-8">
+							<div class="pd-20" style="display: flex; justify-content: end;">
+								<form action="" method="POST">
+									{%csrf_token%}
+									<label style="color: rgb(28, 99, 253);"><b>From</b></label>
+									<input type="date" style="border: 0px; box-shadow: 0px 0px 3px rgb(28, 99, 253); border-radius: 9px; color: rgb(28, 99, 253);" id="fromdate" name="datefrom" min="2014-03-01" max="2021-12-01">
+									<label style="color: rgb(28, 99, 253);"><b>To</b></label>
+									<input type="date" style="border: 0px; box-shadow: 0px 0px 3px rgb(28, 99, 253); border-radius: 9px; color: rgb(28, 99, 253);" id="todate" name="dateto" min="2014-03-01" max="2021-12-01">
+									<br>
+									<div style="display: flex; justify-content: end;">
+									<a href="{%url 'report' %}" class="btn btn-outline-primary" style="margin-right: 1%;">Show All</a>
+									<button type="submit" class="btn btn-outline-primary active"><i class="fa fa-search"></i></button>
+									</div>
+								</form>
+							</div>
+						</div>
+					</div>
+					<div class="pb-20">
+						<table class="table hover data-table-export nowrap">
+							<thead>
+								<tr>
+									<th class="table-plus datatable-sort">No.</th>
+									<th>Order Id</th>
+									<th>Name</th>
+									<th>Product</th>
+									<th>Phone</th>
+									<th>Email</th>
+									<th>Date</th>
+									<th>Tax</th>
+									<th>Total</th>
+									<th>Quantity</th>
+									<th>Status</th>
+
+								</tr>
+							</thead>
+							<tbody>
+								{% for order_prodect in order_prodects %}
+
+								<tr>
+									<td class="table-plus">{{ forloop.counter }}</td>
+									<td>{{order_prodect.order.order_number}}</td>
+									<td>{{order_prodect.order.full_name}}</td>
+									<td>{{order_prodect.prodect.prodectname}}</td>
+									<td>{{order_prodect.order.phone}}</td>
+									<td>{{order_prodect.order.email}}</td>
+
+									<td>{{order_prodect.created_at}}</td>
+									<td>{{order_prodect.order.tax}}</td>
+									<td>{{order_prodect.order.order_total}}</td>
+									<td>{{order_prodect.quantity}}</td>
+									<td>
+										{% if order_prodect.status == 'Placed' %}
+										<b style="color: rgb(0, 110, 255);">{{order_prodect.status}}</b>
+										{% endif %}
+										{% if order_prodect.status == 'Shipping' %}
+										<b style="color: rgb(255, 196, 0);">{{order_prodect.status}}</b>
+										{% endif %}
+										{% if order_prodect.status == 'Deliverd' %}
+										<b style="color: rgb(9, 255, 0);">{{order_prodect.status}}</b>
+										{% endif %}
+										{% if order_prodect.status == 'Cancelled' %}
+										<b style="color: red;">{{order_prodect.status}}</b>
+										{% endif %}
+										{% if order_prodect.status == 'Return' %}
+										<b style="color: rgb(92, 92, 92);">{{order_prodect.status}}</b>
+										{% endif %}
+									</td>
+
+								</tr>
+
+								{% endfor %}
+
+							</tbody>
+						</table>
+					</div>
+				</div>
 			</div>
-			<div class="pb-20">
-				<table class="table hover data-table-export nowrap">
-					<thead>
-						<tr>
-							<th class="table-plus datatable-sort">No.</th>
-							<th>Order Id</th>
-							<th>Name</th>
-							<th>Product</th>
-							<th>Phone</th>
-							<th>Email</th>
-							<th>Date</th>
-							<th>Tax</th>
-							<th>Total</th>
-							<th>Quantity</th>
-							<th>Status</th>
+			<div class="tab-pane fade show " id="product_list" role="tabpanel">
+				<div class="card-box mb-30">
+					<div class="pd-20">
+						<h4 class="text-blue h4">Report</h4>
+						<b class="text-blue h6" style="color: rgb(90, 90, 90);">Product List</b>
 
-						</tr>
-					</thead>
-					<tbody>
-						{% for order_prodect in order_prodects %}
+					</div>
+					<div class="pb-20">
+						<table class="table hover data-table-export nowrap">
+							<thead>
+								<tr>
+									<th class="table-plus datatable-nosort">No.</th>
+										<th>Model_No</th>
+										<th>Brand</th>
+										<th>Prodect_name</th>
+										<th>Stock</th>
+										<th>Price</th>
+										<th>img</th>
+								</tr>
+							</thead>
+							<tbody>
+								{% for prodect in prodects %}
+								<tr>
+									<td class="table-plus">{{ forloop.counter }}</td>
+									<td>{{prodect.model_no}}</td>
+									<td>{{prodect.brand}}</td>
+									<td>{{prodect.prodectname}}</td>
+									<td>{{prodect.stock}}</td>
+									<td>{{prodect.price}}</td>
+									<td class="table-plus">
+										<div class="name-avatar d-flex align-items-center">
+											<div class="avatar mr-2 flex-shrink-0">
+												<img src="{{prodect.img1.url}}" class="border-radius-100 shadow" width="65px" height="65px" alt="{{prodect.img1}}">
+											</div>
+										</div>
+									</td>
+								</tr>
+								{% endfor %}
+								
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div><div class="tab-pane fade show " id="user_list" role="tabpanel">
+				<div class="card-box mb-30">
+					<div class="pd-20">
+						<h4 class="text-blue h4">Report</h4>
+						<b class="text-blue h6" style="color: rgb(90, 90, 90);">User List</b>
 
-						<tr>
-							<td class="table-plus">{{ forloop.counter }}</td>							
-							<td>{{order_prodect.order.order_number}}</td>
-							<td>{{order_prodect.order.full_name}}</td>
-							<td>{{order_prodect.prodect.prodectname}}</td>
-							<td>{{order_prodect.order.phone}}</td>
-							<td>{{order_prodect.order.email}}</td>
-							
-							<td>{{order_prodect.created_at}}</td>
-							<td>{{order_prodect.order.tax}}</td>
-							<td>{{order_prodect.order.order_total}}</td>
-							<td>{{order_prodect.quantity}}</td>
-							<td>
-								{% if order_prodect.status == 'Placed' %}
-									<b style="color: rgb(0, 110, 255);">{{order_prodect.status}}</b>
-								{% endif %}
-								{% if order_prodect.status == 'Shipping' %}
-									<b style="color: rgb(255, 196, 0);">{{order_prodect.status}}</b>
-								{% endif %}
-								{% if order_prodect.status == 'Deliverd' %}
-									<b style="color: rgb(9, 255, 0);">{{order_prodect.status}}</b>
-								{% endif %}
-								{% if order_prodect.status == 'Cancelled' %}
-									<b style="color: red;">{{order_prodect.status}}</b>
-								{% endif %}
-								{% if order_prodect.status == 'Return' %}
-									<b style="color: rgb(92, 92, 92);">{{order_prodect.status}}</b>
-								{% endif %}
-							</td>
+					</div>
+					<div class="pb-20">
+						<table class="table hover data-table-export nowrap">
+							<thead>
+								<tr>
+									<th class="table-plus datatable-nosort">No.</th>
+                                        <th>profile_img</th>
+										<th>username</th>
+										<th>email</th>
+										<th>phone</th>
+										<th>date_joined</th>
+										<th>Status</th>
+								</tr>
+							</thead>
+							<tbody>
+								{% for user in users %}
+								<tr>
+									<td class="table-plus">{{ forloop.counter }}</td>
+                                    {% if profile_img %}
+                                    <td class="table-plus">
+										<div class="name-avatar d-flex align-items-center">
+											<div class="avatar mr-2 flex-shrink-0">
+												<img src="{{user.profile_img.url}}" class="border-radius-100 shadow" width="65px" height="65px" alt="">
+											</div>
+										</div>
+									</td>
+                                    {% else %}
+                                    <td class="table-plus">
+										<div class="name-avatar d-flex align-items-center">
+											<div class="avatar mr-2 flex-shrink-0">
+												<img src="{% static 'adm/vendors/images/user.png' %}" class="border-radius-100 shadow" width="65px" height="65px" alt="">
+											</div>
+										</div>
+									</td>
+                                    {% endif %}
+									<td>{{user.username}}</td>
+									<td>{{user.email}}</td>
+                                    <td>{{user.phone}}</td>
+									<td>{{user.date_joined}}</td>
+                                    <td>
+                                        {% if user.is_superuser %}
+                                        <b style="color: red;">Admin</b>
+                                        {% else %}
+                                        <b style="color: skyblue;">User</b>
+                                        {% endif %}
+                                    </td>
 
-						</tr>
-
-						{% endfor %}
-
-					</tbody>
-				</table>
+								</tr>
+								{% endfor %}
+							</tbody>
+						</table>
+					</div>
+				</div>
 			</div>
+			<!-- Export Datatable End -->
 		</div>
-		<!-- Export Datatable End -->
 	</div>
-</div>
+
 
 </div>
 <!-- js -->
@@ -94,6 +233,25 @@
 <script src="{% static 'adm/src/plugins/datatables/js/vfs_fonts.js' %}"></script>
 <!-- Datatable Setting js -->
 <script src="{% static 'adm/vendors/scripts/datatable-setting.js' %}"></script>
+
+<script>
+	$(function () {
+        var dtToday = new Date();
+
+        var month = dtToday.getMonth() + 1;
+        var day = dtToday.getDate();
+        var year = dtToday.getFullYear();
+
+        if (month < 10)
+            month = '0' + month.toString();
+        if (day < 10)
+            day = '0' + day.toString();
+
+        var maxDate = year + '-' + month + '-' + day;
+        $('#todate').attr('max', maxDate);
+        $('#fromdate').attr('max', maxDate);
+    });
+</script>
 </body>
 
 </html>
