--- a/templats/userst/checkout.html
+++ b/templats/userst/checkout.html
@@ -350,7 +350,6 @@
 					</div>
 				</div>
 			</div>
-
 		</div>
 	</div>
 	</div>
@@ -435,7 +434,7 @@
 				title: "Congratulation!",
 				text: "You Got A Couppon!",
 				icon: "success",
-				button: "Aww yess!",
+				button: "OK!",
 			  });
 			  document.getElementById("discount").textContent =
 				"-" + "Rs." + json.discount_price;
