--- a/templats/adm/cat_list.html
+++ b/templats/adm/cat_list.html
@@ -40,7 +40,7 @@
 												<i class="dw dw-more"></i>
 											</a>
 											<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
-												<!-- <a class="dropdown-item" href="{% url 'edit' catagory.id %}"><i class="dw dw-edit2"></i> Edit</a> -->
+												<a class="dropdown-item" href="{% url 'cat_edit' catagory.id %}"><i class="dw dw-edit2"></i> Edit</a>
 												<a class="dropdown-item" onclick="delete_cat('{{catagory.id}}')" data-toggle="modal" data-target="#exampleModalCenter" style="color: red;"><i class="dw dw-delete-3"></i> Delete</a>
 											</div>
 										</div>
